--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,99 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="md_red_400">#EF5350</color>
+    <color name="md_red_500">#F44336</color>
+    <color name="md_red_A400">#FF1744</color>
+
+    <color name="md_yellow_A400">#FFD600</color>
+
+    <color name="md_deep_purple_A400">#651FFF</color>
+
+    <color name="md_deep_purple_300">#9575CD</color>
+    <color name="md_deep_purple_400">#7E57C2</color>
+    <color name="md_deep_purple_600">#5E35B1</color>
+    <color name="md_deep_purple_700">#512DA8</color>
+    <color name="md_deep_purple_800">#4527A0</color>
+    <color name="md_deep_purple_500">#673AB7</color>
+    <color name="md_deep_purple_A200">#7C4DFF</color>
+
+
+    <color name="md_blue_500">#2196F3</color>
+    <color name="md_blue_A400">#2979FF</color>
+
+    <color name="md_cyan_400">#26c6da</color>
+
+    <color name="md_green_A700">#00C853</color>
+    <color name="md_green_500">#4CAF50</color>
+
+
+    <color name="md_grey_200">#EEEEEE</color>
+    <color name="md_grey_400">#BDBDBD</color>
+    <color name="md_grey_500">#9E9E9E</color>
+    <color name="md_grey_600">#757575</color>
+    <color name="md_grey_60">#212121</color>
+    <color name="md_grey_700">#616161</color>
+    <color name="md_grey_800">#424242</color>
+
+    <color name="md_black_1000">#000000</color>
+    <color name="md_white_1000">#FFFFFF</color>
+    <color name="md_white_100">#D4D4D4</color>
+
+    <color name="md_teal_A400">#1DE9B6</color>
+    <color name="md_deep_orange_A400">#FF3D00</color>
+    <color name="md_light_green_A400">#76FF03</color>
+
+    <color name="primaryColor">#9243f2</color>
+    <color name="primaryLightColor">#c874ff</color>
+    <color name="primaryDarkColor">#5b06be</color>
+
+    <color name="secondaryColor">#fce63f</color>
+    <color name="secondaryLightColor">#ffff75</color>
+    <color name="secondaryDarkColor">#c5b400</color>
+
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#212121</color>
+
+    <color name="googlePodColor">#1E8FD6</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="red">#E94F37</color>
+    <color name="otp_grey">#A9A9A9</color>
+    <color name="off_white">#606060</color>
+    <color name="faded_white">#808080</color>
+    <color name="btn_disable">#606060</color>
+
+    <color name="colorAccent">#ffae29</color>
+    <color name="colorOnSurface">#FFFFFF</color>
+    <color name="colorBackground">#111111</color>
+
+    <color name="nav_grey">#AAAAAA</color>
+
+
+    <color name="gray_e5e5e5">#E5E5E5</color>
+    <color name="gray_08c4c4c4">#59C4C4C4</color>
+    <color name="gray_c4c4c4">#C4C4C4</color>
+    <color name="transparenGrey">#BFC4C4C4</color>
+    <color name="gray_f4f4f4">#F4F4F4</color>
+    <color name="textColor">#ECF0FD</color>
+
+    <color name="brand_green">#00DF9A</color>
+    <color name="brand_red">#FF314A</color>
+    <color name="brand_grey">#212121</color>
+    <color name="brand_white">#FFFFFF</color>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="brand_blue">#00BBF9</color>
+    <color name="brand_light_green">#00F5D4</color>
+    <color name="brand_purple">#9B5DE5</color>
+    <color name="brand_happy_yellow">#FEE440</color>
+
+    <color name="colorJet">#252525</color>
+    <color name="color_facebook">#3c5999</color>
+    <color name="color_google">#dc4c3f</color>
 </resources>
