--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -37,19 +37,10 @@
         <item name="android:showDividers">none</item>
         <item name="actionBarDivider">@android:color/transparent</item>
 
-        <item name="md_corner_radius">10dp</item>
-        <item name="md_color_title">@color/primaryTextColor</item>
-        <item name="md_color_content">@color/primaryTextColor</item>
-        <item name="md_color_button_text">@color/primaryLightColor</item>
-        <item name="md_font_title">@font/poppins_bold</item>
-        <item name="md_font_body">@font/poppins</item>
-        <item name="md_font_button">@font/poppins</item>
-        <item name="md_background_color">@color/distinctBackground</item>
-
         <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>
 
-        <item name="popupMenuBackground">@color/distinctBackground</item>
-        <item name="android:popupBackground">@color/distinctBackground</item>
+        <item name="popupMenuBackground">@color/white</item>
+        <item name="android:popupBackground">@color/white</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.MaterialComponents.NoActionBar">
@@ -65,14 +56,6 @@
 
         <item name="fontFamily">@font/poppins</item>
         <item name="android:fontFamily">@font/poppins</item>
-        <item name="md_corner_radius">10dp</item>
-        <item name="md_color_title">@color/textColor</item>
-        <item name="md_color_content">@color/textColor</item>
-        <item name="md_color_button_text">@color/primaryLightColor</item>
-        <item name="md_font_title">@font/poppins_bold</item>
-        <item name="md_font_body">@font/poppins_bold</item>
-        <item name="md_font_button">@font/poppins_bold</item>
-        <item name="md_background_color">@color/distinctBackground</item>
 
         <item name="android:windowAnimationStyle">@style/WindowAnimationStyle</item>
         <item name="android:windowBackground">@color/colorBackground</item>
@@ -83,4 +66,38 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
+    <style name="WindowAnimationStyle" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:activityOpenExitAnimation">@android:anim/fade_out</item>
+        <item name="android:activityCloseEnterAnimation">@android:anim/slide_in_left</item>
+        <item name="android:activityCloseExitAnimation">@android:anim/slide_out_right</item>
+    </style>
+
+    <style name="CustomBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
+        <item name="shapeAppearance">@style/CustomShapeAppearanceBottomSheetDialog</item>
+        <item name="android:windowSoftInputMode">adjustResize|stateVisible</item>
+    </style>
+
+    <style name="CustomShapeAppearanceBottomSheetDialog" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">16dp</item>
+        <item name="cornerSizeTopLeft">16dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+        <item name="android:background">@color/md_grey_60</item>
+    </style>
+
+    <style name="CustomBottomSheetDialog" parent="Theme.MaterialComponents.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/CustomBottomSheet</item>
+    </style>
+
+    <style name="Theme.JAMITApp.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.JAMITApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.JAMITApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
