--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -67,6 +67,13 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="Theme.Teensecure.SplashScreen" parent="Theme.SplashScreen">
+        <!-- Customize your splash screen theme here -->
+        <item name="windowSplashScreenBackground">@color/colorBackground</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/teensec</item>
+        <item name="postSplashScreenTheme">@style/SplashTheme</item>
+    </style>
+
     <style name="WindowAnimationStyle" parent="@android:style/Animation.Activity">
         <item name="android:activityOpenEnterAnimation">@android:anim/fade_in</item>
         <item name="android:activityOpenExitAnimation">@android:anim/fade_out</item>
