--- a/app/src/main/res/layout/fragment_select_level.xml
+++ b/app/src/main/res/layout/fragment_select_level.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F0F2F5"
+    android:background="@color/secondaryBackground"
     android:fillViewport="true"
     tools:context=".views.fragments.FragmentSelectLevel">
 
