--- a/app/src/main/res/layout/fragment_game_options.xml
+++ b/app/src/main/res/layout/fragment_game_options.xml
@@ -48,11 +48,11 @@
         app:layout_constraintTop_toBottomOf="@+id/title_b" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20sp"
         android:background="@drawable/container"
         android:orientation="vertical"
-        android:padding="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
