--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -16,32 +16,43 @@
 
         <TextView
             android:id="@+id/welcome_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/welcome_text"
             android:textColor="@color/primaryDarkColor"
             android:textSize="36sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/app_logo"
+        <TextView
+            android:id="@+id/app_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_extrabold"
+            android:text="@string/app_name"
+            android:textColor="@color/secondaryColor"
+            android:textSize="48sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
+
+        <!--<com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationView"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="@+id/welcome_text"
-            app:layout_constraintStart_toStartOf="@+id/welcome_text"
-            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
-            app:srcCompat="@drawable/teensec" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_url="https://lottie.host/2c6df325-a41f-4975-82ab-c508df604fec/f4uVcbaaPD.json" />-->
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/poppins_bold"
             android:minHeight="80dp"
             android:text="@string/start_text"
@@ -52,7 +63,7 @@
             app:cornerRadius="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/app_logo" />
+            app:layout_constraintTop_toBottomOf="@+id/app_name" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_about"
