--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -19,6 +19,15 @@
             app:popExitAnim="@android:anim/slide_out_right"
             app:popUpTo="@id/fragmentGameOptions"
             app:popUpToInclusive="false" />
+        <action
+            android:id="@+id/action_fragmentGameOptions_to_fragmentRwLevelSelector"
+            app:destination="@id/fragmentRwLevelSelector"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out"
+            app:popUpTo="@id/fragmentGameOptions"
+            app:popUpToInclusive="false" />
     </fragment>
 
     <fragment
@@ -66,5 +75,20 @@
         <argument
             android:name="selectedLevel"
             app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragmentRwLevelSelector"
+        android:name="com.j0t1m4.teensecure.views.fragments.FragmentRwLevelSelector"
+        android:label="fragment_rw_level_selector"
+        tools:layout="@layout/fragment_rw_level_selector">
+        <action
+            android:id="@+id/action_fragmentRwLevelSelector_to_fragmentLearningContent"
+            app:destination="@id/fragmentLearningContent"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out"
+            app:popUpTo="@id/fragmentRwLevelSelector"
+            app:popUpToInclusive="false" />
     </fragment>
 </navigation>
